# yolo-sod

./: README.md  pyproject.toml
yolo_sod/: VOC2007.yaml  __init__.py  export.py  image_processor.py  inference.py  main.py  utils.py
